<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitSnap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_workout">New Workout</string>
    <string name="action_add_exercise">Add Exercise</string>
    <string name="action_save_workout">Save Workout</string>
    <string name="action_new_exercise">New Exercise</string>
    <string name="action_save_exercise">Save Exercise</string>
    <string name="title">Select Workout:</string>
    <string name="button_start_workout">Start Workout</string>
    <string name="button_analytics">Analytics</string>
    <string name="button_edit_workout">Edit Workout</string>
    <string name="button_edit_exercise">Edit Exercise</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="title_activity_analytics">AnalyticsActivity</string>
    <string name="title_activity_additem">AddItemActivity</string>
    <string name="title_activity_workout_selection">SelectWorkoutActivity</string>
    <string name="title_activity_simple_xyplot">SimpleXYPlotActivity</string>
    <string name="title_activity_dynamic_xyplot">DynamicXYPlotActivity</string>
    <string name="title_activity_time_xyplot">TimeXYPlotActivity</string>
    <string name="title_activity_simple_pie_chart">SimplePieChartActivity</string>
    <string name="content">Image</string>
    <string name="menu_settings">Settings</string>
    <string name="add_a_workout">Add a Workout</string>
    <string name="add_a_workout_hint">What kind of workout do you want?</string>
    <string name="add">Add</string>
    <string name="title_activity_edit_workout">Editing Workout</string>
    <string name="title_activity_edit_exercise_selection">Select an Exercise</string>
    <string name="title_activity_edit_exercise">Editing Exercise</string>
    <string name="title_activity_edit_workout_selection">Select a Workout</string>
    <string name="title_activity_add_exercise_selection">Add Exercises</string>
    <string name="activity_text">Activity</string>
    <string name="count_text">Count</string>
    <string name="time_stamp">00:00:00</string>
    <string name="start_exercise">Done!</string>
    <string name="title_activity_enter_exercise_information">EnterExerciseInformationActivity
        </string>
    <string name="title_activity_break_timer">BreakTimerActivity</string>
    <string name="set_hint">Sets</string>
    <string name="rep_hint">Reps</string>
    <string name="weight_hint">Weight</string>
    <string name="hour_hint">00h</string>
    <string name="minute_hint">00m</string>
    <string name="second_hint">00s</string>
    <string name="take_break">Break</string>
</resources>
