<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alexanderverge.fitsnap.EnterExerciseInformationActivity">

    <EditText android:id="@+id/sets"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_hint"
        android:inputType="numberDecimal"/>

    <EditText android:id="@+id/reps"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/sets"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rep_hint"
        android:inputType="numberDecimal"/>

    <EditText android:id="@+id/weight"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/reps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_hint"
        android:inputType="numberDecimal"/>

    <LinearLayout android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/weight">
        <EditText android:id="@+id/hours"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hour_hint"
            android:inputType="numberDecimal"/>

        <EditText android:id="@+id/minutes"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minute_hint"
            android:inputType="numberDecimal"/>

        <EditText android:id="@+id/seconds"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_hint"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Button android:id="@+id/take_break"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_break"
        android:layout_below="@id/time"
        android:layout_alignParentRight="true"
        android:onClick="takeBreak"/>


</RelativeLayout>
