<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alexanderverge.fitsnap.WorkoutActivity">

    <TextView android:id="@+id/activity_text"
        android:text="@string/activity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView android:id="@+id/amount"
        android:text="@string/time_stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_text"
        android:paddingTop="30dp"
        android:gravity="center"
        android:textSize="20sp"/>

    <Button android:id="@+id/start_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_exercise"
        android:layout_below="@id/amount"
        android:layout_alignParentRight="true"
        android:onClick="enterInfo"/>

</RelativeLayout>
