<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/bluelight">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/greenlight" >
        <Button
            android:id="@+id/button_start_workout"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:text="@string/button_start_workout"
            android:onClick="startWorkout"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/orangelight"
        android:layout_below="@+id/top"
        android:orientation="horizontal">

        <!--<ImageButton
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageButton1"
            android:contentDescription="@string/content"
            android:clickable="true"
            android:src="@drawable/bluebutton"
            android:onClick="analytics" />-->

        <Button
            android:id="@+id/button_analytics"
            android:layout_height="match_parent"
            android:layout_width="0px"
            android:text="@string/button_analytics"
            android:onClick="testAnalytics"
            android:layout_weight="1"
            android:nestedScrollingEnabled="false" />

        <LinearLayout
            android:id="@+id/bottom_right"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/orangelight"
            android:layout_below="@+id/top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_edit_workout"
                android:layout_height="match_parent"
                android:layout_width="0px"
                android:text="@string/button_edit_workout"
                android:onClick="editWorkout"
                android:layout_weight="1"
                android:nestedScrollingEnabled="false" />

            <Button
                android:id="@+id/button_edit_exercise"
                android:layout_height="match_parent"
                android:layout_width="0px"
                android:text="@string/button_edit_exercise"
                android:onClick="editExercise"
                android:layout_weight="1"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
